Buttons text wrapping fixed — closes #339

--- a/assets/scss/_vendor/inuit.css/objects/_beautons.scss
+++ b/assets/scss/_vendor/inuit.css/objects/_beautons.scss
@@ -51,7 +51,7 @@
 	.btn {
 		display: inline-block; /* [1] */
 		vertical-align: middle; /* [2] */
-		white-space: nowrap; /* [3] */
+		white-space: normal; /* [3] */
 		font-family: inherit; /* [4] */
 		font-size: 100%; /* [4] */
 		cursor: pointer; /* [5] */
