--- a/rtl.css
+++ b/rtl.css
@@ -2202,7 +2202,7 @@ html.flexbox, html.site-title {
   /* [1] */
   vertical-align: middle;
   /* [2] */
-  white-space: nowrap;
+  white-space: normal;
   /* [3] */
   font-family: inherit;
   /* [4] */
@@ -9225,7 +9225,7 @@ hr, .separator {
   background: none !important; }
 
 .addthis_32x32_style .dummy .at300bs, .addthis_32x32_style .at300bs, .addthis_32x32_style .at15t {
-  background: url(../images/addThis_32x32_pxg.png) no-repeat right;
+  background: url(../images/addThis_32x32_pxg.png) no-repeat left;
   opacity: 0.3; }
 
 div.addthis_toolbox a {
