--- a/style.css
+++ b/style.css
@@ -2202,7 +2202,7 @@ html.flexbox, html.site-title {
   /* [1] */
   vertical-align: middle;
   /* [2] */
-  white-space: nowrap;
+  white-space: normal;
   /* [3] */
   font-family: inherit;
   /* [4] */
